<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="235dp"
        android:layout_height="201dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/eMail"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/mailSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/mailSign"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/MailHint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pass"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/passSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passSign"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/PassHint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailSign"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fName"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/fName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/textLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lName"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <TextView
        android:id="@+id/textContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="@color/blue"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:background="@drawable/corner_radius"
        android:ems="10"
        android:hint="@string/contactHint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:background="@drawable/button_border"
        android:text="@string/Create"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.916" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:background="@drawable/button_border"
        android:text="@string/Back"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.916" />

</androidx.constraintlayout.widget.ConstraintLayout>